# ARIMAXModel

./: .dvcignore  .gitignore  Makefile  coverage.xml  requirements.txt  setup.cfg
.dvc/: config
.dvc/tmp/: lock
.github/workflows/: ci.yaml
configs/: data_config.yaml  parameters_config.yaml
notebooks/: Stationarity_test.ipynb  arima_notebook.ipynb  arimax_notebook.ipynb  arma_models.ipynb  eda_analysis.ipynb  eda_analysis_processed_data.ipynb  stationarity.ipynb  test_stationarity.ipynb
src/backtesting/: __init__.py  backtest.py
src/data_pipelines/: __init__.py  fetch_data.py
src/modeling/: __init__.py  model.py  train_arima.py
tests/: test_data_pipeline.py  test_import.py
