[metadata]
name = ARIMAStockForecaster
version = 0.1.0
author = cabersdev
author_email = giovanni.caberlotto@email.com
description = Stock forecasting system using ARIMA models
long_description = file: README.md
license = MIT
url = https://github.com/cabersdev/ARIMAStockForecaster

[options]
package_dir = 
    = src
packages = find_namespace:
python_requires = >=3.8
install_requires =
    polars >=0.19.0
    yfinance >=0.2.0
    diskcache >=5.6.0

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-mock>=3.0.0

[options.packages.find]
where = src
include =
    data_pipelines*
    modeling*
    backtesting*